--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -6,7 +6,7 @@
     <title>Websocket</title>
 </head>
 <body>
-    <h1>Websocket demo</h1>
+    <h1 id="header">Websocket demo</h1>
      {{--  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>  --}}
 <script src="/socket.io/socket.io.js"></script>
   <script>
